--- a/coding-bootcamp-testimonials-slider/style.css
+++ b/coding-bootcamp-testimonials-slider/style.css
@@ -19,6 +19,8 @@ body {
 .container {
     display: flex;
     justify-content: center;
+    max-width: 1440px;
+    position: relative;
 }
 
 .left {
@@ -34,7 +36,7 @@ body {
 
 .curve-bg {
     position: absolute;
-    bottom: 0;
+    bottom: -350px;
     left: 0;
 }
 
@@ -114,4 +116,57 @@ body {
 
 .hidden {
     display: none;
+}
+
+@media(max-width: 768px) {
+    .container {
+        flex-direction: column-reverse;
+        width: 100%;
+        padding: 25px;
+        max-width: 375px;
+    }
+    h1 {
+        text-align: center;
+        font-size: 22px;
+    }
+    .left {
+        width: 100%;
+        padding: 0;
+    }
+    .testimonial {
+        margin-top: 60px;
+    }
+    .testimonial > p {
+        text-align: center;
+        font-size: 20px;
+    }
+    .testimonial > p > .strong {
+        display: block;
+    }
+    .right {
+        width: 100%;
+        left: 0;
+        padding-top: 50px;
+    }
+    .bg > img {
+        margin-top: 10%;
+        object-fit: contain;
+        width: 140%;
+        height: 1000%;
+    }
+    .picture {
+        width: 100%;
+        height: 100%;
+    }
+    .picture > img {
+        width: 100%;
+        height: 100%;
+    }
+    .quotes-bg > img {
+        width: 75px;
+        transform: translate(60px, 30px);
+    }
+    .icons {
+        transform: translate(30vw, -63vh);
+    }
 }
