--- a/base-apparel-coming-soon/style.css
+++ b/base-apparel-coming-soon/style.css
@@ -110,6 +110,7 @@ img {
 .icon-arrow {
     border-radius: 10rem;
     box-shadow: 0 19px 38px -15px rgba(0,0,0,0.30);
+    background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 
 .icon-arrow:hover {
@@ -176,7 +177,6 @@ img {
 
     .icon-arrow {
         padding: 10px 25px;
-        background-color: var(--desaturated-red);
         cursor: pointer;
         margin-right: auto;
         margin-left: -25px;
@@ -233,7 +233,6 @@ img {
 
     .icon-arrow {
         padding: 15px 45px;
-        background-color: var(--desaturated-red);
         cursor: pointer;
         margin-left: -30px;
     }
