--- a/style.css
+++ b/style.css
@@ -90,22 +90,7 @@ ul li p {
     transform: scale(1.2);
 }
 
-footer {
-    background-color: #222;
-    color: #fff;
-    font-size: 18px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-}
-
-footer a {
-    color: #fff;
-}
-
-footer i {
-    color: red;
+li:empty {
+    height: 0;
+    border: none;
 }
